Fix deleteTaskById and deleteProjectById